[workspace]
resolver = "2"
members = [
    "cli",
]

[workspace.package]
version = "0.4.0"
license = "MPL-2.0"
edition = "2024"
repository = "https://github.com/hollowpointer/zond"

[workspace.dependencies]
anyhow = "1.0.99"
async-trait = "0.1.86"
colored = "3.1.1"
clap = { version = "4.5.45", features = ["derive"] }
pnet = "0.35.0"
rand = "0.10.2"
indicatif = "0.18.0"
console = "0.16.1"
thiserror = "2.0.11"
crossterm = "0.29.0"
rayon = "1.11.0"
tracing = "0.1.44"

zond-engine = { git = "https://github.com/zond-rs/zond-engine.git", branch = "main" }
zond-core = { git = "https://github.com/zond-rs/zond-engine.git", branch = "main" }
zond-protocols = { git = "https://github.com/zond-rs/zond-engine.git", branch = "main" }
zond-plugins = { git = "https://github.com/zond-rs/zond-engine.git", branch = "main" }
zond-system = { git = "https://github.com/zond-rs/zond-engine.git", branch = "main" }
