[package]
name = "zond-cli"
version = "0.6.2"
license = "MPL-2.0"
edition = "2024"
repository = "https://github.com/zond-rs/zond-cli"
description = "Command-Line Interface (CLI) for the Zond Engine"

[dependencies]
zond-engine = { version = "0.6.1" }

clap = { version = "4.5.45", features = ["derive"] }
anyhow = "1.0.99"
console = "0.16.1"
indicatif = "0.18.0"
colored = "3.1.1"
rand = "0.10.2"
pnet = "0.35.0"
tracing = "0.1.44"

tokio = { version = "1.47.1", features = ["full"] }
unicode-width = "0.2.2"
sys-info = "0.9"
is-root = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-indicatif = "0.3.14"
dashmap = "6.2.1"
crossterm = "0.29.0"

[[bin]]
name = "zond"
path = "src/main.rs"
